[gd_scene load_steps=3 format=3 uid="uid://cbap0r3pfee3h"]

[ext_resource type="Script" path="res://addons/FeagiIntegration/Editor/Resources/Prefabs/ActionPresserSet/ActionPresser/FEAGI_UI_Panel_ActionPresserConfig.gd" id="1_3is7c"]
[ext_resource type="PackedScene" uid="uid://cx1eqnkmlnor2" path="res://addons/FeagiIntegration/Editor/Resources/Prefabs/Collapsible/FEAGI_UI_Prefab_Collapsible.tscn" id="2_vkicv"]

[node name="FEAGI_UI_Panel_ActionPresserConfig" type="VBoxContainer"]
offset_right = 170.0
offset_bottom = 51.0
theme_override_constants/separation = 8
script = ExtResource("1_3is7c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="friendly_name" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Text"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="CollapsiblePrefab" parent="." instance=ExtResource("2_vkicv")]
layout_mode = 2
show_text = &"Advanced"

[node name="Show" parent="CollapsiblePrefab" index="0"]
text = "Advanced"

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Minimum amount of time in seconds to hold an action press from FEAGI"
mouse_filter = 1
text = "Hold length"

[node name="hold" type="SpinBox" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals" index="1"]
layout_mode = 2

[node name="Label2" type="Label" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The strength FEAGI needs to specifically push a button, from 0.0 - 1.0"
mouse_filter = 1
text = "Press Strength"

[node name="action_thresh" type="SpinBox" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer2"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals" index="2"]
layout_mode = 2

[node name="Label3" type="Label" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Release Strength "

[node name="release_thresh" type="SpinBox" parent="CollapsiblePrefab/PanelContainer/MarginContainer/Internals/HBoxContainer3"]
layout_mode = 2
tooltip_text = "The strength FEAGI needs to specifically be at to release a button (even before its timer ends), from 0.0 - 1.0"
max_value = 1.0
step = 0.1

[editable path="CollapsiblePrefab"]
